base/linds/deploy/factorio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorio
  namespace: default
spec:
  selector:
    matchLabels:
      app: factorio
  template:
    metadata:
      labels:
        app: factorio
    spec:
      nodeSelector:
        datacenter: jd
      containers:
        - name: factorio
          image: factoriotools/factorio:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 34197
              protocol: UDP
            - containerPort: 27015
          volumeMounts:
            - mountPath: /factorio
              name: jd-nfs-pvc
              subPath: factorio
      volumes:
        - name: jd-nfs-pvc
          persistentVolumeClaim:
            claimName: jd-nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: factorio
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: factorio
  ports:
    - port: 34197
      targetPort: 34197
      protocol: UDP
      name: factorio-udp
    - port: 27015
      targetPort: 27015
      protocol: TCP
      name: factorio-tcp
  externalIPs:
    - 172.16.1.10
