base/linds/deploy/pdf.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling-pdf-deployment
  namespace: default
  labels:
    app: stirling-pdf
spec:
  selector:
    matchLabels:
      app: stirling-pdf
  template:
    metadata:
      labels:
        app: stirling-pdf
    spec:
      containers:
        - name: stirling-pdf
          image: docker.io/stirlingtools/stirling-pdf:latest
          resources:
            requests:
              cpu: 50m
              memory: 1Gi
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf-service
  namespace: default
  labels:
    app: stirling-pdf
spec:
  selector:
    app: stirling-pdf
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
