base/linds/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: arr
spec:
  selector:
    matchLabels:
      app: jackett
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jackett
    spec:
      terminationGracePeriodSeconds: 120
      nodeSelector:
        datacenter: linds
      containers:
        - name: jackett
          image: linuxserver/jackett:latest
          volumeMounts:
            - mountPath: /config
              name: arr-config
          ports:
            - containerPort: 9117
      restartPolicy: Always
      volumes:
        - name: arr-config
          persistentVolumeClaim:
            claimName: jackett-config
---
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: arr
spec:
  ports:
    - port: 9117
      targetPort: 9117
      protocol: TCP
      name: http
  selector:
    app: jackett
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: arr
  annotations:
    cert-manager.io/cluster-issuer: linds-ca
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: jackett.linds.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  number: 9117
  tls:
    - hosts:
        - jackett.linds.com.au
      secretName: jackett-linds-com-au-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: arr
spec:
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      terminationGracePeriodSeconds: 120
      nodeSelector:
        datacenter: linds
      containers:
        - name: radarr
          image: linuxserver/radarr:latest
          volumeMounts:
            - mountPath: /config
              name: arr-config
            - name: linds-nfs-nas
              mountPath: /mnt/nas/torrent
              subPath: torrent
            - name: linds-nfs-nas
              mountPath: /mnt/nas/Movies
              subPath: Movies
          ports:
            - containerPort: 7878
      restartPolicy: Always
      volumes:
        - name: arr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: linds-nfs-nas
          persistentVolumeClaim:
            claimName: linds-nfs-nas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: arr
spec:
  ports:
    - port: 7878
      targetPort: 7878
      protocol: TCP
      name: http
  selector:
    app: radarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: arr
  annotations:
    cert-manager.io/cluster-issuer: linds-ca
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: radarr.linds.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
  tls:
    - hosts:
        - radarr.linds.com.au
      secretName: radarr-linds-com-au-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: arr
spec:
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      terminationGracePeriodSeconds: 120
      nodeSelector:
        datacenter: linds
      containers:
        - name: sonarr
          image: linuxserver/sonarr:latest
          volumeMounts:
            - mountPath: /config
              name: arr-config
            - name: linds-nfs-nas
              mountPath: /mnt/torrent
              subPath: torrent
            - name: linds-nfs-nas
              mountPath: /mnt/TVShows
              subPath: TVShows
            - name: linds-nfs-nas
              mountPath: /mnt/Movies
              subPath: Movies
          ports:
            - containerPort: 8989
      restartPolicy: Always
      volumes:
        - name: arr-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: linds-nfs-nas
          persistentVolumeClaim:
            claimName: linds-nfs-nas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: arr
spec:
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
      name: http
  selector:
    app: sonarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: arr
  annotations:
    cert-manager.io/cluster-issuer: linds-ca
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: sonarr.linds.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
  tls:
    - hosts:
        - sonarr.linds.com.au
      secretName: sonarr-linds-com-au-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: arr
spec:
  selector:
    matchLabels:
      app: bazarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      terminationGracePeriodSeconds: 120
      nodeSelector:
        datacenter: linds
      containers:
        - name: bazarr
          image: linuxserver/bazarr:latest
          volumeMounts:
            - mountPath: /config
              name: arr-config
            - name: linds-nfs-nas
              mountPath: /mnt/TVShows
              subPath: TVShows
            - name: linds-nfs-nas
              mountPath: /mnt/Movies
              subPath: Movies
            - name: linds-nfs-nas
              mountPath: /mnt/torrent
              subPath: torrent
          ports:
            - containerPort: 6767
      restartPolicy: Always
      volumes:
        - name: arr-config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: linds-nfs-nas
          persistentVolumeClaim:
            claimName: linds-nfs-nas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: arr
spec:
  ports:
    - port: 6767
      targetPort: 6767
      protocol: TCP
      name: http
  selector:
    app: bazarr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: arr
  annotations:
    cert-manager.io/cluster-issuer: linds-ca
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: bazarr.linds.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
  tls:
    - hosts:
        - bazarr.linds.com.au
      secretName: bazarr-linds-com-au-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maintainerr
  namespace: arr
spec:
  selector:
    matchLabels:
      app: maintainerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: maintainerr
    spec:
      terminationGracePeriodSeconds: 120
      nodeSelector:
        datacenter: linds
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: maintainerr
          image: ghcr.io/maintainerr/maintainerr:latest
          volumeMounts:
            - mountPath: /opt/data
              name: arr-config
          ports:
            - containerPort: 6246
      restartPolicy: Always
      volumes:
        - name: arr-config
          persistentVolumeClaim:
            claimName: maintainerr-config
---
apiVersion: v1
kind: Service
metadata:
  name: maintainerr
  namespace: arr
spec:
  ports:
    - port: 6246
      targetPort: 6246
      protocol: TCP
      name: http
  selector:
    app: maintainerr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maintainerr
  namespace: arr
  annotations:
    cert-manager.io/cluster-issuer: linds-ca
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: maintainerr.linds.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maintainerr
                port:
                  number: 6246
  tls:
    - hosts:
        - maintainerr.linds.com.au
      secretName: maintainerr-linds-com-au-tls
